<resources>
    <string name="app_name">UnjukRasa</string>
    <string name="home">Beranda</string>
    <string name="pesan">Pesan</string>
    <string name="open">Buka</string>
    <string name="close">Tutup</string>
    <string name="mendukung">Mendukung</string>
    <string name="membuat">Membuat (0)</string>
    <string name="logout">Keluar</string>
    <string name="help">Bantuan</string>
    <string name="about">Tentang</string>
    <string name="daftar">Daftar</string>
    <string name="login">Masuk</string>
    <string name="settings">Pengaturan</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="initiate_demonstration">Inisiasi Unjuk Rasa</string>
    <string name="participated">Ikut</string>
    <string name="upvote">Dukung</string>
    <string name="downvoted">Menolak</string>
    <string name="shared">Membagikan</string>
    <string name="search_bar_title">Apa yang kamu keluhkan?</string>
    <string name="add_progress">Tambah Perkembangan</string>
    <string name="upload_image">Unggah Foto</string>
    <string name="youtube_video">Youtube Video</string>
    <string name="demonstration">Unjuk Rasa</string>
    <string name="to_title">Unjuk rasa ini ditujukan kepada:</string>
    <string name="progress">Perkembangan</string>
    <string name="add_progress_title">Tambah perkembangan…</string>
    <string name="downvote">Tolak</string>
    <string name="share">Bagikan</string>
    <string name="participate">Ikut unjuk rasa</string>
    <string name="title">Judul</string>
    <string name="participation_title">Adakan unjuk rasa ke jalan</string>
    <string name="time">Waktu</string>
    <string name="location">Lokasi</string>
    <string name="upload">Unggah</string>
    <string name="police_permit">Surat Ijin Kepolisian</string>
    <string name="edit_profile">Ubah Data Diri</string>
    <string name="upload_photo_profile">Unggah Foto Profil</string>
    <string name="edit">Ubah</string>
    <string name="edit_profile_success">Peubahan data berhasil dilakukan!</string>
    <string name="trending">Trending</string>
    <string name="most_upvoted">Paling Banyak Didukung</string>
    <string name="most_recent">Terbaru</string>
    <string name="version_and_company">v2.1.3 • PT Peduli Negeri</string>
    <string name="new_demonstration">Unjuk Rasa Baru</string>
    <string name="to">Kepada</string>
    <string name="profile">Profil</string>
    <string name="create_new_demonstration">Membuat unjuk rasa baru</string>
    <string name="register_new_user">Daftar Pengguna Baru</string>
    <string name="register">Daftar Baru</string>
    <string name="participate_success_title">Ikut!!</string>
    <string name="participant">Partisipan Unjuk Rasa</string>
    <string name="search_bar_person_title">Cari orang dengan nama…</string>
    <string name="initiator">Inisiator</string>
    <string name="add">Tambah</string>
    <string name="cancel_participate">Batal ikut</string>
    <string name="cancel_upvote">Batal mendukung</string>
    <string name="cancel_downvote">Batal menolak</string>
    <string name="start">Mulai</string>
    <string name="upload_image_loading_message">Foto sedang diproses, mohon tunggu sebentar.</string>
    <string name="name_input_empty">Nama wajib diisi!</string>
    <string name="email_input_exist">Email sudah dipakai. Silahkan pakai email lain dengan mengubahnya di pengaturan.</string>
    <string name="exit">Keluar</string>
    <string name="exit_edit_page_confirmation_message">Apakah kamu yakin ingin keluar? Data yang telah dimasukkan akan hilang.</string>
    <string name="description_input_empty">Deskripsi wajib diisi.</string>
    <string name="add_progress_confirmation_message">Apakah kamu yakin ingin menambahkan perkembangan ini? Tekan cancel untuk mengubah data kembali</string>
    <string name="add_progress_success_message">Perkembangan berhasil ditambahkan. Terima kasih.</string>
    <string name="upload_progress_image_failed_message">Unggah foto ke-%1$d gagal. Silahkan coba lagi dengan mengubah perkembangan yang sudah dibuat. (%2$s)</string>
    <string name="unknown_error_message">Ada kesalahan, silahkan coba lagi. (%1$s)</string>
    <string name="progress_description_input_placeholder">Deskripsikan perkembangannya…</string>
    <string name="demonstration_destination">Unjuk rasa ini ditujukan kepada: %1$s</string>
    <string name="image_load_failed">Gagal memuat foto. (%1$s)</string>
    <string name="cancel_participation">Batal Ikut</string>
    <string name="cancel_participation_confirmation_message">Apakah kamu yakin ingin membatalkan partisipasi anda pada unjuk rasa ini?</string>
    <string name="cancel_participation_success_message">Anda telah berhasil membatalkan partisipasi anda pada unjuk rasa ini.</string>
    <string name="participation_count">%1$d Ikut</string>
    <string name="cancel_action_not_exist">Anda belum mengikuti/mendukung/menolak unjuk rasa ini sebelumnya.</string>
    <string name="cancel_upvote_confirmation_message">Apakah kamu yakin ingin membatalkan dukungan anda pada unjuk rasa ini?</string>
    <string name="cancel_upvote_success_message">Anda telah berhasil membatalkan dukungan anda pada unjuk rasa ini.</string>
    <string name="upvote_count">%1$d Dukung</string>
    <string name="cancel_downvote_success_message">Anda telah berhasil membatalkan penolakan anda pada unjuk rasa ini.</string>
    <string name="downvote_count">%1$d Menolak</string>
    <string name="add_progress_limit_message">Perkembangan tidak bisa lebih dari 6 buah.</string>
    <string name="action_already_done_message">Anda telah mengikuti/mendukung/menolak unjuk rasa ini sebelumnya.</string>
    <string name="upvote_success_message">Terima kasih telah mendukung!</string>
    <string name="downvote_success_message">Anda sudah menolak.</string>
    <string name="share_count">%1$d Membagikan</string>
    <string name="exit_new_page_confirmation_message">Apakah kamu yakin ingin keluar? Perubahan yang telah dilakukan akan hilang.</string>
    <string name="title_input_empty">Judul wajib diisi!</string>
    <string name="destination_input_empty">Tujuan wajib diisi!</string>
    <string name="time_input_empty">Waktu wajib diisi!</string>
    <string name="location_input_empty">Lokasi wajib diisi!</string>
    <string name="edit_demonstration">Ubah Unjuk Rasa</string>
    <string name="edit_demonstration_confirmation_message">Apakah kamu yakin ingin mengubah unjuk rasa ini? Tekan cancel untuk mengubah data kembali</string>
    <string name="edit_demonstration_success_message">Unjuk rasa berhasil diubah. Terima kasih.</string>
    <string name="upload_police_permit_image_failed_message">Unggah foto ijin kepolisian gagal. Silahkan coba lagi dengan mengubah unjuk rasa yang sudah dibuat. (%1$s)</string>
    <string name="description_input_placeholder">Deskripsikan suaramu…</string>
    <string name="email_not_valid">Email tidak valid.</string>
    <string name="upload_photo_profile_failed">Unggah foto profil gagal. Silahkan coba lagi. (%1$s)</string>
    <string name="exit_app_confirmation">Tekan sekali lagi untuk keluar</string>
    <string name="logout_success_message">Kamu sudah keluar dari akunmu.</string>
    <string name="image_or_video_empty">Sertakan minimal 1 foto atau video youtube.</string>
    <string name="youtube_video_link_not_valid">Tautan video youtube tidak valid.</string>
    <string name="start_demonstration">Mulai Unjuk Rasa</string>
    <string name="start_demonstration_confirmation_message">Apakah kamu yakin ingin memulai unjuk rasa ini? Tekan cancel untuk mengubah data kembali</string>
    <string name="create_demonstration_success">Unjuk rasa berhasil dibuat. Terima kasih.</string>
    <string name="upload_demonstration_image_failed_message">Unggah foto ke-%1$d gagal. Silahkan coba lagi dengan mengubah unjuk rasa yang sudah dibuat. (%2$s)</string>
    <string name="police_permit_not_exist">Belum ada ijin dari kepolisian.</string>
    <string name="upvoter">Pendukung Unjuk Rasa</string>
    <string name="downvoter">Menolak Unjuk Rasa</string>
    <string name="sharing">Membagikan Unjuk Rasa</string>
    <string name="demonstration_tab_title">Membuat (%1$d)</string>
    <string name="search_result_empty_message">Tidak ada unjuk rasa yang relevan dengan pencarian anda, silahkan coba lagi pakai keyword lain.</string>
</resources>