<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".demonstration.DemonstrationPageFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/demonstration_page_items"
            app:navigationIcon="@drawable/ic_detail_back_no_circle"
            app:title="@string/demonstration"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vpImages"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/intoTabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/fui_transparent"
                app:layout_constraintBottom_toBottomOf="@+id/vpImages"
                app:tabBackground="@drawable/tab_pager_selector"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/vpImages" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle">

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    app:singleLine="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipParticipant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/participated"
                        app:chipIcon="@mipmap/ic_launcher_round" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipUpvote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upvote"
                        app:chipIcon="@drawable/ic_arrow_upward_24dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDownvote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/downvoted"
                        app:chipIcon="@drawable/ic_arrow_downward_24dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shared"
                        app:chipIcon="@drawable/ic_share_24dp" />

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

            <TextView
                android:id="@+id/tvTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/to_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/rvPerson" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/tvTo" />

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/progress"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAddProgress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:visibility="gone"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/tvProgress">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/circleImageView2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_add_circle_outline_24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/add_progress_detail"
                        android:textSize="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/circleImageView2"
                        app:layout_constraintTop_toTopOf="@+id/circleImageView2" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/cvAddProgress" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabUpvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/green"
        android:contentDescription="@string/upvote"
        android:src="@drawable/ic_arrow_upward_24dp"
        app:tint="@color/white"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fabDownvote"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDownvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/downvote"
        android:src="@drawable/ic_arrow_downward_24dp"
        app:tint="@color/white"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fabShare"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share_24dp"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fabParticipate"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabParticipate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/green"
        android:contentDescription="@string/participate"
        android:text="@string/participate"
        android:visibility="gone"
        app:borderWidth="0dp"
        android:textColor="@color/white"
        app:icon="@mipmap/ic_launcher_round"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>